--- a/.github/workflows/e2e-init.yaml
+++ b/.github/workflows/e2e-init.yaml
@@ -88,7 +88,7 @@ jobs:
                   || { echo "RUN_IMAGE_TRIVY_FAIL=true" >> $GITHUB_ENV ; echo "error, image ${IMAGE_NAME}:${{ needs.call_build_ci_image.outputs.imageTag }} is bad" ; }
           done
             # ------------- by default , dual stack
-            
+
       # test against commit version
       - name: Setup Kind Cluster
         uses: nick-invision/retry@v2
@@ -103,8 +103,8 @@ jobs:
                 -e SPIDERPOOL_CONTROLLER_IMAGE_NAME=spiderpool-controller-race \
                 -e E2E_IP_FAMILY=${{ inputs.ip_family }} -e PYROSCOPE_LOCAL_PORT=""
 
-      - name: Run e2e Test For Dual-stack
-        id: dualstack_e2e
+      - name: Run e2e Test
+        id: run_e2e
         if: ${{ needs.get_ref.outputs.ipfamily_dual_e2e == 'true' }}
         continue-on-error: true
         run: |
@@ -131,7 +131,7 @@ jobs:
               echo ::set-output name=upload::false
           fi
 
-      - name: Upload e2e log For Dual-stack
+      - name: Upload e2e log
         if: ${{ needs.get_ref.outputs.ipfamily_dual_e2e == 'true' }}
         uses: actions/upload-artifact@v3.1.1
         with:
@@ -146,18 +146,17 @@ jobs:
           path: e2ereport.json
           retention-days: 1
 
-      - name: Show e2e Result For Dual-stack
+      - name: Show e2e Result
         run: |
-          if ${{ steps.dualstack_e2e.outputs.pass == 'true' }} ;then
+          if ${{ steps.run_e2e.outputs.pass == 'true' }} ;then
               exit 0
           else
               exit 1
           fi
 
       - name: Get the E2E Performance Result For Dual-stack
-        # run all e2e cases
         id: get_performance
-        if: ${{ needs.get_ref.outputs.ipfamily_dual_e2e == 'true' }}
+        if: ${{ inputs.ip_family == 'dual' }}
         shell: bash
         run: |
           # sudo apt-get install -y jq
@@ -167,7 +166,7 @@ jobs:
           echo ::set-output name=result::${TODO_STATUS}
 
       - name: Update Badge For Dual-stack
-        if: ${{ steps.get_performance.outputs.result != '' && needs.get_ref.outputs.ipfamily_dual_e2e == 'true' }}
+        if: ${{ steps.get_performance.outputs.result != '' && inputs.ip_family == 'dual' }}
         uses: schneegans/dynamic-badges-action@v1.6.0
         with:
           auth: ${{ secrets.WELAN_PAT }}
