--- a/.github/workflows/e2e-init.yaml
+++ b/.github/workflows/e2e-init.yaml
@@ -76,19 +76,19 @@ jobs:
           name: image-tar-spiderpool-controller
           path: test/.download
 
-      # - name: Load And Scan Images
-      #   if: ${{ inputs.ip_family == 'dual' }}
-      #   run: |
-      #     TAR_FILES=` ls test/.download `
-      #     echo $TAR_FILES
-      #     for ITEM in $TAR_FILES ; do
-      #         IMAGE_NAME=${ITEM%*.tar}
-      #         grep test/.download/${ITEM} |  docker import - ${IMAGE_NAME}:${{ needs.call_build_ci_image.outputs.imageTag }}
-      #         echo "---------trivy checkout image ${IMAGE_NAME}:${{ needs.call_build_ci_image.outputs.imageTag }} --------------------"
-      #         make lint_image_trivy -e IMAGE_NAME=${IMAGE_NAME}:${{ needs.call_build_ci_image.outputs.imageTag }}  \
-      #             || { echo "RUN_IMAGE_TRIVY_FAIL=true" >> $GITHUB_ENV ; echo "error, image ${IMAGE_NAME}:${{ needs.call_build_ci_image.outputs.imageTag }} is bad" ; }
-      #     done
-      #       # ------------- by default , dual stack
+      - name: Load And Scan Images
+        if: ${{ inputs.ip_family == 'dual' }}
+        run: |
+          TAR_FILES=` ls test/.download `
+          echo $TAR_FILES
+          for ITEM in $TAR_FILES ; do
+              IMAGE_NAME=${ITEM%*.tar}
+              cat test/.download/${ITEM} |  docker import - ${IMAGE_NAME}:${{ needs.call_build_ci_image.outputs.imageTag }}
+              echo "---------trivy checkout image ${IMAGE_NAME}:${{ needs.call_build_ci_image.outputs.imageTag }} --------------------"
+              make lint_image_trivy -e IMAGE_NAME=${IMAGE_NAME}:${{ needs.call_build_ci_image.outputs.imageTag }}  \
+                  || { echo "RUN_IMAGE_TRIVY_FAIL=true" >> $GITHUB_ENV ; echo "error, image ${IMAGE_NAME}:${{ needs.call_build_ci_image.outputs.imageTag }} is bad" ; }
+          done
+            # ------------- by default , dual stack
 
       # test against commit version
       - name: Setup Kind Cluster
