--- a/.github/workflows/e2e-init.yaml
+++ b/.github/workflows/e2e-init.yaml
@@ -81,12 +81,8 @@ jobs:
           TAR_FILES=` ls test/.download `
           echo $TAR_FILES
           for ITEM in $TAR_FILES ; do
-              echo "123"
               IMAGE_NAME=${ITEM%*.tar}
-              echo "456"
-              cat test/.download/${ITEM}
-              docker import - ${IMAGE_NAME}:${{ needs.call_build_ci_image.outputs.imageTag }}
-              echo "789"
+              cat test/.download/${ITEM} | docker import - ${IMAGE_NAME}:${{ needs.call_build_ci_image.outputs.imageTag }}
               echo "---------trivy checkout image ${IMAGE_NAME}:${{ needs.call_build_ci_image.outputs.imageTag }} --------------------"
               make lint_image_trivy -e IMAGE_NAME=${IMAGE_NAME}:${{ needs.call_build_ci_image.outputs.imageTag }}  \
                   || { echo "RUN_IMAGE_TRIVY_FAIL=true" >> $GITHUB_ENV ; echo "error, image ${IMAGE_NAME}:${{ needs.call_build_ci_image.outputs.imageTag }} is bad" ; }
