--- a/.github/workflows/auto-pr-ci.yaml
+++ b/.github/workflows/auto-pr-ci.yaml
@@ -189,17 +189,6 @@ jobs:
       ref: ${{ needs.get_ref.outputs.ref }}
       submit: false
     secrets: inherit
-  
-  e2e_issue:
-    needs: [call_build_ci_image, get_ref, call_release_chart]
-    runs-on: ubuntu-latest
-    steps:
-      - name: echo
-        run: |
-          echo ${{ github.repository }}
-          echo ${{ github.repository_owner }}
-          echo "TIMESTAMP=`date +%Y-%m-%d`" >> $GITHUB_ENV
-          echo ${{ needs.call_build_ci_image.outputs.imageTag }}
 
   call_e2e_dual:
     needs: [call_build_ci_image, get_ref, call_release_chart]
@@ -207,6 +196,7 @@ jobs:
     uses: ./.github/workflows/e2e-init.yaml
     with:
       ip_family: dual
+      image_tag: ${{ needs.call_build_ci_image.outputs.imageTag }}
       push: false
       ref: ${{ needs.get_ref.outputs.ref }}
     secrets: inherit
@@ -217,6 +207,7 @@ jobs:
     uses: ./.github/workflows/e2e-init.yaml
     with:
       ip_family: ipv4
+      image_tag: ${{ needs.call_build_ci_image.outputs.imageTag }}
       push: false
       ref: ${{ needs.get_ref.outputs.ref }}
     secrets: inherit
@@ -227,6 +218,7 @@ jobs:
     uses: ./.github/workflows/e2e-init.yaml
     with:
       ip_family: ipv6
+      image_tag: ${{ needs.call_build_ci_image.outputs.imageTag }}
       push: false
       ref: ${{ needs.get_ref.outputs.ref }}
     secrets: inherit
