--- a/.github/workflows/e2e-init.yaml
+++ b/.github/workflows/e2e-init.yaml
@@ -28,11 +28,11 @@ jobs:
       - name: Prepare
         id: prepare
         run: |
-          echo "ref: ${{ needs.get_ref.outputs.ref }} "
-          echo "e2e_labels: ${{ needs.get_ref.outputs.e2e_labels }}"
-          echo "ipfamily_ipv4only_e2e: ${{ needs.get_ref.outputs.ipfamily_ipv4only_e2e }}"
-          echo "ipfamily_ipv6only_e2e: ${{ needs.get_ref.outputs.ipfamily_ipv6only_e2e }}"
-          echo "ipfamily_dual_e2e: ${{ needs.get_ref.outputs.ipfamily_dual_e2e }}"
+          echo "ref: ${{ inputs.ref }} "
+          echo "e2e_labels: ${{ inputs.ref.e2e_labels }}"
+          echo "ipfamily_ipv4only_e2e: ${{ inputs.ref.ipfamily_ipv4only_e2e }}"
+          echo "ipfamily_ipv6only_e2e: ${{ inputs.ref.ipfamily_ipv6only_e2e }}"
+          echo "ipfamily_dual_e2e: ${{ inputs.ref.ipfamily_dual_e2e }}"
           echo "===== image "
           echo "ci image tag: ghcr.io/${{ github.repository }}/spiderpool-controller-ci:${{ image_tag }}"
           echo "ci race image tag: ghcr.io/${{ github.repository }}/spiderpool-controller-ci:${{ image_tag }}-race"
