--- a/.github/workflows/e2e-init.yaml
+++ b/.github/workflows/e2e-init.yaml
@@ -50,7 +50,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           persist-credentials: false
-          ref: ${{ inputs.ref.outputs.ref }}
+          ref: ${{ inputs.ref }}
 
       - name: Setup Golang
         uses: actions/setup-go@v3
