--- a/.github/workflows/e2e-init.yaml
+++ b/.github/workflows/e2e-init.yaml
@@ -11,18 +11,19 @@ on:
       ip_family:
         required: true
         type: string
+      ref:
+        required: true
+        type: string
       image_tag:
         required: true
         type: string
-      ref:
-        required: false
+      call_release_chart:
+        required: true
         type: string
       push:
         required: false
         type: boolean
-      charts:
-        required: false
-        type: string
+
 jobs:
   call_e2e:
     runs-on: ubuntu-latest
@@ -41,7 +42,7 @@ jobs:
           echo "ci image tag: ghcr.io/${{ github.repository }}/spiderpool-agent-ci:${{ inputs.image_tag }}"
           echo "ci race image tag: ghcr.io/${{ github.repository }}/spiderpool-agent-ci:${{ inputs.image_tag }}-race"
           echo "===== chart "
-          echo "chart package artifact: ${{ inputs.charts }}"
+          echo "chart package artifact: ${{ inputs.call_release_chart }}"
           TMP=` date +%m%d%H%M%S `
           E2E_CLUSTER_NAME="spiderpool${TMP}"
           echo ::set-output name=clusterName::${E2E_CLUSTER_NAME}
