--- a/.github/workflows/auto-pr-ci.yaml
+++ b/.github/workflows/auto-pr-ci.yaml
@@ -199,7 +199,7 @@ jobs:
       image_tag: ${{ needs.call_build_ci_image.outputs.imageTag }}
       push: false
       ref: ${{ needs.get_ref.outputs }}
-      call_release_chart: ${{ needs.call_release_chart.outputs.artifact }}
+      call_chart: ${{ needs.call_release_chart.outputs.artifact }}
     secrets: inherit
 
   call_e2e_ipv4:
@@ -211,7 +211,7 @@ jobs:
       image_tag: ${{ needs.call_build_ci_image.outputs.imageTag }}
       push: false
       ref: ${{ needs.get_ref.outputs }}
-      call_release_chart: ${{ needs.call_release_chart.outputs.artifact }}
+      call_chart: ${{ needs.call_release_chart.outputs.artifact }}
     secrets: inherit
 
   call_e2e_ipv6:
@@ -223,5 +223,5 @@ jobs:
       image_tag: ${{ needs.call_build_ci_image.outputs.imageTag }}
       push: false
       ref: ${{ needs.get_ref.outputs }}
-      call_release_chart: ${{ needs.call_release_chart.outputs.artifact }}
+      call_chart: ${{ needs.call_release_chart.outputs.artifact }}
     secrets: inherit
