--- a/.github/workflows/e2e-init.yaml
+++ b/.github/workflows/e2e-init.yaml
@@ -23,6 +23,7 @@ on:
       charts:
         required: false
         type: string
+
 jobs:
   call_e2e:
     runs-on: ubuntu-latest
@@ -180,3 +181,12 @@ jobs:
           label: performance
           message: ${{ steps.get_performance.outputs.result }}
           color: lightgrey
+
+      - name: Show Trivy Scan Report
+        run: |
+          if [ "${{ env.RUN_IMAGE_TRIVY_FAIL }}" == "true" ] ; then
+              echo "error, image is not secure, see detail on Step 'Load And Scan Images' "
+              exit 1
+          else
+              exit 0
+          fi
