--- a/.github/workflows/auto-pr-ci.yaml
+++ b/.github/workflows/auto-pr-ci.yaml
@@ -185,6 +185,44 @@ jobs:
       ref: ${{ needs.get_ref.outputs.ref }}
       submit: false
     secrets: inherit
+  
+  trivy_scan_images:
+    runs-on: ubuntu-latest
+    needs: [call_build_ci_image, get_ref]
+    if: ${{ needs.get_ref.outputs.e2e_enabled == 'true' }}
+    steps:
+      - name: Download spiderpool-agent image
+        uses: actions/download-artifact@v3
+        with:
+          name: image-tar-spiderpool-agent
+          path: test/.download
+
+      - name: Download spiderpool-controller image
+        uses: actions/download-artifact@v3
+        with:
+          name: image-tar-spiderpool-controller
+          path: test/.download
+
+      - name: Load And Scan Images
+        run: |
+          TAR_FILES=` ls test/.download `
+          echo $TAR_FILES
+          for ITEM in $TAR_FILES ; do
+              IMAGE_NAME=${ITEM%*.tar}
+              cat test/.download/${ITEM} |  docker import - ${IMAGE_NAME}:${{ needs.call_build_ci_image.outputs.imageTag }}
+              echo "---------trivy checkout image ${IMAGE_NAME}:${{ needs.call_build_ci_image.outputs.imageTag }} --------------------"
+              make lint_image_trivy -e IMAGE_NAME=${IMAGE_NAME}:${{ needs.call_build_ci_image.outputs.imageTag }}  \
+                  || { echo "RUN_IMAGE_TRIVY_FAIL=true" >> $GITHUB_ENV ; echo "error, image ${IMAGE_NAME}:${{ needs.call_build_ci_image.outputs.imageTag }} is bad" ; }
+          done
+
+      - name: Show Trivy Scan Report
+        run: |
+          if [ "${{ env.RUN_IMAGE_TRIVY_FAIL }}" == "true" ] ; then
+              echo "error, image is not secure, see detail on Step 'Load And Scan Images' "
+              exit 1
+          else
+              exit 0
+          fi
 
   call_e2e_dual:
     needs: [call_build_ci_image, get_ref, call_release_chart]
