--- a/.github/workflows/auto-pr-ci.yaml
+++ b/.github/workflows/auto-pr-ci.yaml
@@ -186,7 +186,7 @@ jobs:
       submit: false
     secrets: inherit
 
-  trivy_scan_image:
+  trivy_scan_images:
     needs: [call_build_ci_image, get_ref, call_release_chart]
     if: ${{ needs.get_ref.outputs.e2e_enabled == 'true' }}
     uses: ./.github/workflows/trivy-scan-image.yaml
